# Gomoku

./: .gitignore  CMakeLists.txt  Makefile  log  pbrain-gomoku-ai  teseses  testds  testdsds  tests.sh  testsfdsfs
.github/workflows/: Checks.yaml  Mirror.yml  Run.yml
src/: Board.cpp  Board.hpp  CMakeLists.txt  Cell.cpp  Cell.hpp  Core.cpp  Core.hpp  Error.cpp  Error.hpp  GameBot.cpp  GameBot.hpp  LineConfig.cpp  LineConfig.hpp  LineConfigHash.cpp  LineConfigHash.hpp  Move.cpp  Move.hpp  main.cpp
test/: gomoku_test_cases.cpp
test/scripts/: anticipation_trap_test.txt  complex_configuration_test.txt  critical_situation_response_test.txt  defense_and_counterattack_test.txt  fuckoff.txt  multiple_opportunities_management_test.txt  multiple_opportunities_management_test2.txt  opportunity_creation_test.txt  test_avoiding_trap.txt  test_border_hasHoles.txt  test_border_succes.txt  test_defense.txt  test_defense_decision.txt  test_error_handling.txt  test_jesus_test.text  test_jesus_test.txt  test_standard_response.txt  test_test.txt  test_time_constraint.txt  test_winning_move.txt
